// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WidgetTextUpdate displays dirty 1`] = `
<TextField
  InputProps={
    Object {
      "className": "WidgetTextInput-InputStyle-3",
      "endAdornment": null,
      "style": Object {},
    }
  }
  className="WidgetTextInput-textInput-1"
  disabled={true}
  error={false}
  inputProps={
    Object {
      "className": "WidgetTextInput-inputStyle-2",
    }
  }
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  required={false}
  select={false}
  value="Goodbye World"
  variant="standard"
/>
`;

exports[`WidgetTextUpdate displays disabled 1`] = `
<TextField
  InputProps={
    Object {
      "className": "WidgetTextInput-InputStyle-3",
      "endAdornment": null,
      "style": Object {},
    }
  }
  className="WidgetTextInput-textInput-1"
  disabled={true}
  error={false}
  inputProps={
    Object {
      "className": "WidgetTextInput-inputStyle-2",
    }
  }
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  required={false}
  select={false}
  value="Goodbye World"
  variant="standard"
/>
`;

exports[`WidgetTextUpdate displays localState if different to given value 1`] = `
<TextField
  InputProps={
    Object {
      "className": "WidgetTextInput-InputStyle-3",
      "endAdornment": null,
      "style": Object {},
    }
  }
  className="WidgetTextInput-textInput-1"
  disabled={false}
  error={false}
  inputProps={
    Object {
      "className": "WidgetTextInput-inputStyle-2",
    }
  }
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  required={false}
  select={false}
  value="Hello World"
  variant="standard"
/>
`;

exports[`WidgetTextUpdate displays text 1`] = `
<TextField
  InputProps={
    Object {
      "className": "WidgetTextInput-InputStyle-3",
      "endAdornment": null,
      "style": Object {},
    }
  }
  className="WidgetTextInput-textInput-1"
  disabled={false}
  error={false}
  inputProps={
    Object {
      "className": "WidgetTextInput-inputStyle-2",
    }
  }
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  required={false}
  select={false}
  value="Hello World"
  variant="standard"
/>
`;

exports[`WidgetTextUpdate displays with units 1`] = `
<TextField
  InputProps={
    Object {
      "className": "WidgetTextInput-InputStyle-3",
      "endAdornment": <div
        className="WidgetTextInput-unitDiv-5"
    >
        <div
            style={
                Object {
                    "display": "block",
                  }
            }
        >
            <WithStyles(InputAdornment)
                className="WidgetTextInput-units-6"
                disableTypography={true}
                style={Object {}}
            >
                GW
            </WithStyles(InputAdornment)>
        </div>
    </div>,
      "style": Object {},
    }
  }
  className="WidgetTextInput-textInput-1"
  disabled={false}
  error={false}
  inputProps={
    Object {
      "className": "WidgetTextInput-inputStyle-2",
    }
  }
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  required={false}
  select={false}
  value="1.21"
  variant="standard"
/>
`;
